--- a/www/404.html
+++ b/www/404.html
@@ -19,6 +19,6 @@ layout: default
 <div class="container">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p><strong>Hittade inte sidan :(</strong></p>
+  <p>Sidan du försökte nå kan inte hittas. Försök länken igen eller <a href="mailto:hej@bullret.se">skicka oss en mail</a>, så löser vi det.</p>
 </div>
